--- a/translations/fi.json
+++ b/translations/fi.json
@@ -4,11 +4,15 @@
   // Common
   "USERNAME": "Käyttäjätunnus",
   "PASSWORD": "Salasana",
+  "FIRST_NAME": "Etunimi",
+  "LAST_NAME": "Sukunimi",
+  "EMAIL": "Sähköpostiosoite",
   "FILL_ALL_REQUIRED_FIELDS": "Täytä kaikki vaaditut kentät",
   "NO_EMAIL_ADDRESS": "Ei sähköpostiosoitetta",
   "DASHBOARD": "Dashboard",
   "DIAGNOSTICS": "Diagnostiikkatyökalut",
   "NOT_IMPLEMENTED": "Tätä toimintoa ei ole vielä toteutettu",
+  "DATA_FETCH_FAILED": "Tietojen lataus epäonnistui",
 
   // Login interface
   "LOGIN_HEADLINE": "Kirjaudu Hilleviin",
