Implement app settings interface bases.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -15,6 +15,7 @@
   "DATA_FETCH_FAILED": "Tietojen lataus epäonnistui",
   "SAVE_FAILED": "Tallentaminen epäonnistui",
   "SAVE_SUCCESSFULL": "Tallentaminen onnistui",
+  "SAVE": "Tallenna",
 
   // Login interface
   "LOGIN_HEADLINE": "Kirjaudu Hilleviin",
@@ -30,5 +31,7 @@
   "OLD_PASSWORD_DOES_NOT_MATCH": "Antamasi salasana on väärin",
   "PASSWORD_CHANGED": "Salasana vaihdettu",
   "PASSWORD_CHANGE_FAILED": "Salasanan vaihto epäonnistui",
-  "PASSWORD_VALIDATION_FAILED": "Uudet salasanasi eivät täsmää keskenään"
+  "PASSWORD_VALIDATION_FAILED": "Uudet salasanasi eivät täsmää keskenään",
+  "APP_SETTINGS": "Sovellusasetukset",
+  "NOTIFICATIONS_ENABLED": "Notifikaatiot käytössä"
 }
