Add bases for the ApiManager interface.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -16,6 +16,8 @@
   "SAVE_FAILED": "Tallentaminen epäonnistui",
   "SAVE_SUCCESSFULL": "Tallentaminen onnistui",
   "SAVE": "Tallenna",
+  "MANAGEMENT": "Hallintatyökalut",
+  "API_MANAGEMENT": "Rajapinnat",
 
   // Login interface
   "LOGIN_HEADLINE": "Kirjaudu Hilleviin",
