--- a/translations/fi.json
+++ b/translations/fi.json
@@ -7,6 +7,10 @@
   "FIRST_NAME": "Etunimi",
   "LAST_NAME": "Sukunimi",
   "EMAIL": "Sähköpostiosoite",
+  "TYPE": "Tyyppi",
+  "NAME": "Nimi",
+  "URL": "URL",
+  "LAST_UPDATE": "Päivitetty viimeksi",
   "FILL_ALL_REQUIRED_FIELDS": "Täytä kaikki vaaditut kentät",
   "NO_EMAIL_ADDRESS": "Ei sähköpostiosoitetta",
   "DASHBOARD": "Dashboard",
@@ -35,5 +39,8 @@
   "PASSWORD_CHANGE_FAILED": "Salasanan vaihto epäonnistui",
   "PASSWORD_VALIDATION_FAILED": "Uudet salasanasi eivät täsmää keskenään",
   "APP_SETTINGS": "Sovellusasetukset",
-  "NOTIFICATIONS_ENABLED": "Notifikaatiot käytössä"
+  "NOTIFICATIONS_ENABLED": "Notifikaatiot käytössä",
+
+  // API interface
+  "LIST_OF_APIS": "Rajapinnat"
 }
