Show api's data in the data edition dialog at the right of the api list.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -20,6 +20,7 @@
   "SAVE_FAILED": "Tallentaminen epäonnistui",
   "SAVE_SUCCESSFULL": "Tallentaminen onnistui",
   "SAVE": "Tallenna",
+  "CANCEL": "Peruuta",
   "MANAGEMENT": "Hallintatyökalut",
   "API_MANAGEMENT": "Rajapinnat",
 
