--- a/translations/fi.json
+++ b/translations/fi.json
@@ -10,6 +10,8 @@
   "TYPE": "Tyyppi",
   "NAME": "Nimi",
   "URL": "URL",
+  "ACTIVE": "Aktiivinen",
+  "PASSIVE": "Passiivinen",
   "LAST_UPDATE": "Päivitetty viimeksi",
   "FILL_ALL_REQUIRED_FIELDS": "Täytä kaikki vaaditut kentät",
   "NO_EMAIL_ADDRESS": "Ei sähköpostiosoitetta",
