Implement new api creation tool. Add generic loader directive to simplify the loader implementing on different ui elements.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -45,5 +45,6 @@
   "NOTIFICATIONS_ENABLED": "Notifikaatiot käytössä",
 
   // API interface
-  "LIST_OF_APIS": "Rajapinnat"
+  "LIST_OF_APIS": "Rajapinnat",
+  "CREATE_API": "Uusi rajapinta"
 }
