Add simple confirm service. Implement API removal functionality.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -25,6 +25,7 @@
   "CANCEL": "Peruuta",
   "MANAGEMENT": "Hallintatyökalut",
   "API_MANAGEMENT": "Rajapinnat",
+  "ARE_YOU_SURE": "Oletko varma?",
 
   // Login interface
   "LOGIN_HEADLINE": "Kirjaudu Hilleviin",
