Implement field removal from the api.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -27,6 +27,7 @@
   "MANAGEMENT": "Hallintatyökalut",
   "API_MANAGEMENT": "Rajapinnat",
   "ARE_YOU_SURE": "Oletko varma?",
+  "REMEMBER_TO_SAVE_CHANGES": "Muista tallentaa muutokset!",
 
   // Login interface
   "LOGIN_HEADLINE": "Kirjaudu Hilleviin",
