Fetch API field types from the server.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -1,6 +1,11 @@
 {
   "APP_NAME": "Hillevi",
 
+  // Types
+  "INT": "Kokonaisluku",
+  "DECIMAL": "Desimaaliluku",
+  "STRING": "Teksti",
+
   // Common
   "USERNAME": "Käyttäjätunnus",
   "PASSWORD": "Salasana",
