Select api type from the dropdown list instead of typing it to the ui.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -5,6 +5,9 @@
   "INT": "Kokonaisluku",
   "DECIMAL": "Desimaaliluku",
   "STRING": "Teksti",
+  "JSON": "JSON",
+  "XML": "XML",
+  "INNER": "Sisäinen",
 
   // Common
   "USERNAME": "Käyttäjätunnus",
