Add bases for the apidator - api data manager interface.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -35,6 +35,7 @@
   "CANCEL": "Peruuta",
   "MANAGEMENT": "Hallintatyökalut",
   "API_MANAGEMENT": "Rajapinnat",
+  "API_DATA_MANAGEMENT": "Datan hallinta",
   "ARE_YOU_SURE": "Oletko varma?",
   "REMEMBER_TO_SAVE_CHANGES": "Muista tallentaa muutokset!",
 
