Fetch api selections to the api data manager interface.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -62,6 +62,8 @@
   "CREATE_API": "Uusi rajapinta",
   "INTERFACE_COLUMNS": "Kentät",
 
+  // API data manager interface
+  "SELECT_API": "Valitse rajapinta",
 
   // Tooltips
   "TT_USER_SETTINGS": "Asetukset",
