Implement data fetching for the apidator interface.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -21,6 +21,10 @@
   "FIELD": "Kenttä",
   "ACTIVE": "Aktiivinen",
   "INTERVAL": "Suoritusaikaväli (min)",
+  "INTERFACE": "Rajapinta",
+  "COLUMNS": "Sarakkeet",
+  "ID": "Id",
+  "TIMESTAMP": "Aikaleima",
   "PASSIVE": "Passiivinen",
   "LAST_UPDATE": "Päivitetty viimeksi",
   "FILL_ALL_REQUIRED_FIELDS": "Täytä kaikki vaaditut kentät",
