--- a/translations/fi.json
+++ b/translations/fi.json
@@ -22,11 +22,13 @@
   "ACTIVE": "Aktiivinen",
   "INTERVAL": "Suoritusaikaväli (min)",
   "INTERFACE": "Rajapinta",
+  "DELETE": "Poista",
   "COLUMNS": "Sarakkeet",
   "ID": "Id",
   "TIMESTAMP": "Aikaleima",
   "PASSIVE": "Passiivinen",
   "LAST_UPDATE": "Päivitetty viimeksi",
+  "SELECT_ALL": "Valitse kaikki",
   "FILL_ALL_REQUIRED_FIELDS": "Täytä kaikki vaaditut kentät",
   "NO_EMAIL_ADDRESS": "Ei sähköpostiosoitetta",
   "DASHBOARD": "Dashboard",
@@ -68,6 +70,12 @@
 
   // API data manager interface
   "SELECT_API": "Valitse rajapinta",
+
+  // Notifications interface
+  "UNDISMISSED_NOTIFICATIONS": "Kuittaamattomat ilmoitukset",
+  "DISMISS": "Kuittaa",
+  "NOTIFICATIONS_DISMISSED_SUCCESSFULLY": "Ilmoitukset kuitattu",
+  "NO_UNDISMISSED_NOTIFICATIONS": "Ei kuittaamattomia ilmoituksia",
 
   // Tooltips
   "TT_USER_SETTINGS": "Asetukset",
