--- a/translations/fi.json
+++ b/translations/fi.json
@@ -117,5 +117,11 @@
   "END_DATE": "Mihin",
   "SAVED_GRAPH_SETTINGS": "Tallennettu haku",
   "FETCH_CHART_DATA": "Hae",
-  "RESET_CHART_SETTINGS": "Tyhjennä"
+  "RESET_CHART_SETTINGS": "Tyhjennä",
+  "SCALE_SELECT": "Erittelytarkkuus",
+  "SCALE_MONTH": "Kuukausittain",
+  "SCALE_WEEK": "Viikoittain",
+  "SCALE_DAY": "Päivittäin",
+  "SCALE_HOUR": "Tunneittain",
+  "SCALE_YEAR": "Vuosittain"
 }
