Implement a lot cooler date time input than the god damn dialog.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -10,6 +10,7 @@
   "INNER": "Sisäinen",
 
   // Common
+  "CLOCK_TIME": "klo",
   "USERNAME": "Käyttäjätunnus",
   "PASSWORD": "Salasana",
   "FIRST_NAME": "Etunimi",
