Add datetime translation.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -4,6 +4,7 @@
   // Types
   "INT": "Kokonaisluku",
   "DECIMAL": "Desimaaliluku",
+  "DATETIME": "Aikaleima",
   "STRING": "Teksti",
   "JSON": "JSON",
   "XML": "XML",
