Add field for api hook. Change the order of the elements in the api managing interface.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -11,6 +11,7 @@
   "INNER": "Sisäinen",
 
   // Common
+  "HOOK": "Rajapinnan kahva",
   "CLOCK_TIME": "klo",
   "USERNAME": "Käyttäjätunnus",
   "PASSWORD": "Salasana",
