Add support for the api's column's unit property.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -78,6 +78,7 @@
   "LIST_OF_APIS": "Rajapinnat",
   "CREATE_API": "Uusi rajapinta",
   "INTERFACE_COLUMNS": "Kentät",
+  "UNIT": "Yksikkö",
 
   // API data manager interface
   "SELECT_API": "Valitse rajapinta",
