Some UI changes. Login action detection to more accurate.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -1,5 +1,7 @@
 {
   "APP_NAME": "Hillevi",
+  "WELCOME": "Moi!",
+  "DESCRIPTION_WELCOME": "Lataan tarvittavia tietoja, odotathan hetkisen..",
 
   // Types
   "INT": "Kokonaisluku",
