Small fix to the default values and the translation text.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -167,6 +167,6 @@
 
   // Inspector
   "INSPECTOR": "PC-inspektori",
-  "INSPECTOR_APPLICATION_REPORT": "Sovellukset",
+  "INSPECTOR_APPLICATION_REPORT": "Aktiiviset sovellukset",
   "ACTIVE_TIME": "Aktiivinen aika"
 }
