--- a/translations/fi.json
+++ b/translations/fi.json
@@ -170,6 +170,8 @@
   "INSPECTOR_APPLICATIONS": "Sovellukset",
   "INSPECTOR_APPLICATION_REPORT": "Kokonaiskäyttöaikaraportti",
   "INSPECTOR_APPLICATION_LOAD_PER_TIME": "Käyttöaste kellonajoittain",
+  "INSPECTOR_KEYBOARD": "Näppäimistö",
+  "INSPECTOR_KEYBOARD_SUMMARY": "Yhteenveto",
   "ACTIVE_TIME": "Aktiivinen aika",
   "SELECTED_APPS": "Valitut sovellukset"
 }
