Add bases to the user settings change interface.

--- a/translations/fi.json
+++ b/translations/fi.json
@@ -78,6 +78,7 @@
   "USERS": "Käyttäjät",
   "CREATE_NEW_USER": "Luo uusi käyttäjä",
   "PERMISSIONS": "Käyttöoikeudet",
+  "USER_BASIC_SETTINGS": "Käyttäjän perustiedot",
 
   // Dashboard
   "DASHBOARD_SETTINGS": "Dashboardin asetukset",
