--- a/translations/fi.json
+++ b/translations/fi.json
@@ -79,6 +79,7 @@
   "USERS": "Käyttäjät",
   "CREATE_NEW_USER": "Luo uusi käyttäjä",
   "PERMISSIONS": "Käyttöoikeudet",
+  "PERMISSION": "Käyttöoikeus",
   "USER_BASIC_SETTINGS": "Käyttäjän perustiedot",
   "ACTIONS": "Toiminnot",
   "REMOVE_USER": "Poista käyttäjä",
